[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/Scripts/ColorHealthBar.gd" type="Script" id=1]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HealthBarRed" type="ColorRect" parent="."]
margin_left = -20.0
margin_right = 20.0
margin_bottom = 4.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarGreen" type="ColorRect" parent="."]
margin_left = -20.0
margin_right = 20.0
margin_bottom = 4.0
color = Color( 0.101961, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityTimer" type="Timer" parent="."]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_VisibilityTimer_timeout"]
